background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
 body {
   background-image: url("../resources/background.jpg");
   background-repeat: no-repeat;
+  background-position: center;
+  background-position-x: center;
   background-attachment: fixed;
   background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
